--- a/index.html
+++ b/index.html
@@ -7,26 +7,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Empresa radicada en vila real, en el barrio desde su fundacion en el año 2003. Especializada en control de plagas urbanas garantizando eficacia al mejor precio de la zona">
+    <meta name="description" content="Empresa radicada en villa real, en el barrio desde su fundacion en el año 2003. Especializada en control de plagas urbanas garantizando eficacia al mejor precio de la zona">
     <meta name="keywords" content="CONTROL DE PLAGAS, FUMIGACION, FUMIGACIÓN, RATAS, HORMIGAS, CUCARACHAS, WASPS, TANQUE, DESINFECCION, DESINSECTACION">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="/jquery.slim.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="assets/css/estilos.css">
-    <link rel="stylesheet" href="scss/estilos.scss">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/animate.css">
-    <script src="/js/wow.js"></script>
 </head>
 <body>
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-none d-lg-block d-xl-block "><a href="./index.html"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
-                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-none d-lg-flex justify-content-between d-xl-flex align-items-center">
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-flex d-lg-block d-xl-block "><a href="./index.html"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-flex d-lg-flex justify-content-between d-xl-flex align-items-center">
                         <ul>
                             <li><a class="navbarheaderN" href="./nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
                             <li><a class="navbarheaderM" href="./maquinaria/maquinaria.html">maquinaria</a></li>
@@ -36,31 +31,38 @@
                 </div>
             </div>
             <div class="row justify-content-between">
-                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-block d-md-block d-lg-none d-xl-none "><a href="./index.html"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
-                
-                <nav class="navbar navbar-light bg-light d-md-flex d-lg-none d-xl-none d-flex">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
-                        data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-bars"></i>
-                        </button>
-                    </div>
-                </nav>
-                <div class="collapse" id="navbarToggleExternalContent3">
-                    <div class="bg-light shadow-3 p-4">
-                        <button class="btn btn-link btn-block border-bottom m-0">holaaaaaaaaaa 1</button>
-                        <button class="btn btn-link btn-block border-bottom m-0">aaaaaaaaaaaaaaaaaaaaaaaaaaaaa 2</button>
-                        <button class="btn btn-link btn-block m-0">no me funciona no se porque 3</button>
-                    </div>
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-block d-md-none d-lg-none d-xl-none "><a href="./index.html"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
+                <div class="col-6 d-flex d-md-none d-lg-none d-xl-none justify-content-end mb-0">
+                    <nav class=" d-flex d-md-none d-lg-none d-xl-none navbar navbar-expand-md dark navbar-dark">
+                    <h5 class=" navbarheaderN mr-1">Menu</h5>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                      <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="./nuestraempresa/nuestraempresa.html">Emprersa</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="./maquinaria/maquinaria.html">Maquinaria</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="./productos/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./servicios/servicios.html">Servicios</a>
+                          </li>   
+                      </ul>
+                    </div>  
+                  </nav>
                 </div>
             </div>
         </div>
     </header>
 
-    <section class="container-fluid mt-4">
+    <section class="container-fluid mt-1">
         <div class="row">
-            <div class=" col-12 mb-0">
+            <div class=" col-12 mb-1">
                 <div class="card">
                     <img class="card-img" src="./assets/imagenes/04.jpg" height="325px">
                     <div class="card-img-overlay d-flex justify-content-center align-items-center">
@@ -68,6 +70,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-12">
                 <div class="sectioncortapag d-none d-md-none d-lg-flex d-xl-flex flex-nowrap justify-content-around">
                     <p class="display-4 d-none d-md-none d-lg-block d-xl-block">empresa habilitada en provincia de BSAS</p><i class=" fa-solid fa-file-circle-check d-none d-md-none d-lg-block d-xl-block" ></i>
@@ -76,7 +79,7 @@
                     <p class="d-block d-md-block d-lg-none d-xl-none">empresa habilitada en provincia de BSAS</p><i class=" fa-solid fa-file-circle-check d-block d-md-block d-lg-none d-xl-none" ></i>
                 </div>
             </div>
-            <div class="col-12 ">
+            <div class="col-12 mb-1">
                 <div class=" sectioncertificates d-flex justify-content-between">
                     <a href="">certificado habilitacion ingeniera sanitaria</a>
                     <a href="">certificado habilitacion provincia de BSAS</a>
@@ -130,10 +133,10 @@
             </div>  
             <div class=" col-12 d-none d-xl-block d-lg-block col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
                 <img src="./assets/imagenes/aplicador.jpg" width="100%" height="auto" alt="">
-                <p>dervicio de control de larvasen espacios verdes (en la jerga CL)/p>
+                <p>dervicio de control de larvasen espacios verdes (en la jerga CL)</p>
             </div>
             <div class="col-6 col-md-12 col-lg-12 col-xl12 d-flex justify-content-center align-items-center">
-                <p>Estos son solo algunos de las cuantiosas operaciones y servicios que estamos en condiciones de poder ofrecerle<a href="./maquinaria/maquinaria.html" class="linksentext">conocer más</a>
+                <p>Estos son solo algunos de las cuantiosas operaciones y servicios que estamos en condiciones de poder ofrecerle<a href="./servicios/servicios.html" class="linksentext">conocer más</a>
                 </p>
             </div>
         </div>
@@ -199,4 +202,10 @@
             </div>
         </div>
     </footer>
+    <script src="js/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
+<script src="js/wow.js"></script>
 </body>
+</html>
