--- a/nuestraempresa/nuestraempresa.html
+++ b/nuestraempresa/nuestraempresa.html
@@ -70,7 +70,7 @@
             <div class="col-12"><h6>WES FUMIGACIONES</h6></div>
         </div>
         <div class="row">
-            <div class="col-2 d-none d-md-block d-lg-block d-xl-block"><img src="../assets/imagenes/jefa.jpg"  width="100%" height="auto" alt=""></div>
+            <div class="col-2 d-none d-md-block d-lg-block d-xl-block"><img src="../assets/imagenes/joven-jefa-hacer-su-trabajo-serio-oficina_567313-12156.webp"  width="100%" height="auto" alt=""></div>
             <div class="col-12 col-md-10 col-lg-10 col-xl-10">"Deseamos poner en su conocimiento las operatorias y servicios que estamos en condiciones de poder ofrecerle.
                 WES FUMIGACIONES fue creada en 2003; su Titular Johana Djetzerniak, está ligado a la actividad de Saneamiento Ambiental desde 1996, participando de otras empresas de similares características.
                 Basados en la premisa de jerarquizar la actividad, el objetivo que perseguimos es la eficiencia, seguridad, calidad técnica y atención personalizada de cada prestación.
