--- a/index.html
+++ b/index.html
@@ -63,12 +63,36 @@
     <section class="container-fluid mt-1">
         <div class="row">
             <div class=" col-12 mb-1">
-                <div class="card">
-                    <img class="card-img" src="./assets/imagenes/04.jpg" height="325px">
-                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
-                        <p class="card-text display-3 sombrax">nuestro servicio hace la diferencia</p>
+                <div class="bd-example">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                      <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                      </ol>
+                      <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                          <img class="d-block w-100" src="./assets/imagenes/04.jpg" height="325px" alt="First slide">
+                          <div class="carousel-caption d-flex justify-content-center align-items-center">
+                            <p class="card-text display-3 sombrax">Nuestro servicio hace la diferencia</p>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="./assets/imagenes/HD aplicador.jpg" height="325px" alt="Second slide">
+                          <div class="carousel-caption d-flex justify-content-center align-items-center">
+                            <p class="card-text display-3 sombrax">Ni un bicho en tu casa</p>
+                          </div>
+                        </div>
+                      </div>
+                      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
                     </div>
-                </div>
+                  </div>
             </div>
 
             <div class="col-12">
@@ -88,7 +112,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-6 mb-3 mb-xl-1">
                 <div class="card">
-                    <img class="card-img-top" src="./assets/imagenes/jefa.jpg" height="200px">
+                    <img class="card-img-top" src="./assets/imagenes/joven-jefa-hacer-su-trabajo-serio-oficina_567313-12156.webp" height="200px">
                     <div class="card-body"> "Deseamos poner en su conocimiento las operatorias y servicios que estamos en condic
                         iones de poder ofrecerle.
                         WES FUMIGACIONES fue creada en 2003; su Titular Johana Djetzerniak, está ligada a la actividad de San
