--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
                       <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                           <img class="d-block w-100" src="./assets/imagenes/04.jpg" height="325px" alt="First slide">
-                          <div class="carousel-caption d-flex justify-content-center align-items-center">
-                            <p class="card-text display-3 sombrax">Nuestro servicio hace la diferencia</p>
+                          <div class="carousel-caption d-flex justify-content-center">
+                            <p class="card-text display-4 sombrax">Nuestro servicio hace la diferencia</p>
                           </div>
                         </div>
                         <div class="carousel-item">
                           <img class="d-block w-100" src="./assets/imagenes/HD aplicador.jpg" height="325px" alt="Second slide">
-                          <div class="carousel-caption d-flex justify-content-center align-items-center">
-                            <p class="card-text display-3 sombrax">Ni un bicho en tu casa</p>
+                          <div class="carousel-caption">
+                            <p class="card-text display-4 sombrax">Ni un bicho en tu casa</p>
                           </div>
                         </div>
                       </div>
@@ -105,9 +105,9 @@
             </div>
             <div class="col-12 mb-1">
                 <div class=" sectioncertificates d-flex justify-content-between">
-                    <a href="">certificado habilitacion ingeniera sanitaria</a>
-                    <a href="">certificado habilitacion provincia de BSAS</a>
-                    <a href="">certificado extencion CABA</a>
+                    <a href="">certificado habilitacion ingeniera sanitaria<i class="fa-solid fa-file-arrow-down small"></i></a>
+                    <a href="">certificado habilitacion provincia de BSAS<i class="fa-solid fa-file-arrow-down small"></i></a>
+                    <a href="">certificado extencion CABA<i class="fa-solid fa-file-arrow-down small"></i></a>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-6 mb-3 mb-xl-1">
@@ -118,7 +118,7 @@
                         WES FUMIGACIONES fue creada en 2003; su Titular Johana Djetzerniak, está ligada a la actividad de San
                         eamiento Ambiental desde 1996, 
                         participando de otras empresas de similares características. 
-                        <a class="linksentext" href="./nuestraempresa/nuestraempresa.html" >conoce más</a>
+                        <a class="linksentext" href="./nuestraempresa/nuestraempresa.html" >conocer más</a>
                     </div>
                 </div>
             </div>
@@ -149,18 +149,18 @@
             <div class="col-12 d-flex justify-content-center"><h2>Servicios</h2></div>
             <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
                 <img src="./assets/imagenes/aplicador 2.jpg"  width="100%" height="auto" alt="">
-                <p>Servicio de Desinsectacion (en la jerga DI)</p>
+                <p>Servicio de Desinsectacion (DI)</p>
             </div>  
             <div class="col-12 d-none d-xl-block d-lg-block d-md-block col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
                 <img src="./assets/imagenes/equipo tecnico.jpg" width="100%" height="auto" alt="">
-                <p>Servicio de desratización (en la jerga DR)</p>
+                <p>Servicio de desratización (DR)</p>
             </div>  
             <div class=" col-12 d-none d-xl-block d-lg-block col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
                 <img src="./assets/imagenes/aplicador.jpg" width="100%" height="auto" alt="">
-                <p>dervicio de control de larvasen espacios verdes (en la jerga CL)</p>
+                <p>dervicio de control de larvas en espacios verdes (CL)</p>
             </div>
             <div class="col-6 col-md-12 col-lg-12 col-xl12 d-flex justify-content-center align-items-center">
-                <p>Estos son solo algunos de las cuantiosas operaciones y servicios que estamos en condiciones de poder ofrecerle<a href="./servicios/servicios.html" class="linksentext">conocer más</a>
+                <p>Estos son solo algunos de las cuantiosas operaciones y servicios que estamos en condiciones de poder ofrecerle <a href="./servicios/servicios.html" class="linksentext">conocer más</a>
                 </p>
             </div>
         </div>
@@ -206,7 +206,7 @@
                                 </div>
                                 <div class="form-group mb-4 mt-3">
                                     <div class="col-md-12">
-                                        <input id="phone" name="phone" type="text" placeholder="Dejanos tu Nümero telefonoico" class="form-control">
+                                        <input id="phone" name="phone" type="text" placeholder="Dejanos tu Número telefonoico" class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group mb-4 mt-3">   
@@ -216,7 +216,7 @@
                                 </div>
                                 <div class="form-group mb-4 mt-3">
                                     <div class="col-md-12 text-center">
-                                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                                        <button type="submit" class="btn btn-primary btn-md">Submit</button>
                                     </div>
                                 </div>
                             </fieldset>
