--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                       </ol>
                       <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                          <img class="d-block w-100" src="./assets/imagenes/04.jpg" height="325px" alt="First slide">
-                          <div class="carousel-caption d-flex justify-content-center">
+                          <img class="d-block w-100" src="./assets/imagenes/04.jpg" height="397.52px" alt="First slide">
+                          <div class="carousel-caption">
                             <p class="card-text display-4 sombrax">Nuestro servicio hace la diferencia</p>
                           </div>
                         </div>
                         <div class="carousel-item">
-                          <img class="d-block w-100" src="./assets/imagenes/HD aplicador.jpg" height="325px" alt="Second slide">
+                          <img class="d-block w-100" src="./assets/imagenes/05mod.jpg" height="auto" alt="Second slide">
                           <div class="carousel-caption">
                             <p class="card-text display-4 sombrax">Ni un bicho en tu casa</p>
                           </div>
@@ -124,7 +124,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-6 mb-3 mb-xl-1">
                 <div class="card">
-                    <img class="card-img-top" src="./assets/imagenes/aplicador 2.jpg" height="200px">
+                    <img class="card-img-top" src="./assets/imagenes/09.jpg" height="200px">
                     <div class="card-body">Contamos con un parque de maquinarias actualizado para realizar distintos sist
                         emas de aplicación según la situación lo requiera:
                         Aspersión manual, mecánica, termonebulización, ultra bajo volumen, espolvoreo, gota contro
